@@ -28,8 +28,8 @@ import org.apache.giraph.aggregators.AggregatorWriter;
 import org.apache.giraph.combiner.Combiner;
 import org.apache.giraph.conf.GiraphConfiguration;
 import org.apache.giraph.examples.Algorithm;
-import org.apache.giraph.graph.GiraphJob;
-import org.apache.giraph.graph.GiraphTypeValidator;
+import org.apache.giraph.job.GiraphJob;
+import org.apache.giraph.job.GiraphTypeValidator;
 import org.apache.giraph.io.EdgeInputFormat;
 import org.apache.giraph.io.VertexInputFormat;
 import org.apache.giraph.io.VertexOutputFormat;
