@@ -21,7 +21,7 @@ package org.apache.giraph.examples;
 import org.apache.giraph.examples.SimpleSuperstepVertex.
     SimpleSuperstepVertexInputFormat;
 import org.apache.giraph.vertex.EdgeListVertex;
-import org.apache.giraph.graph.GiraphJob;
+import org.apache.giraph.job.GiraphJob;
 import org.apache.giraph.worker.WorkerContext;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileSystem;
