@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-500: Refactor job launch code out of graph package and into job package (ereisman)
+
   GIRAPH-493: Remove EdgeWithSource (nitay)
 
   GIRAPH-429: Number of input split threads set to 1 less than necessary (majakabiljo)
